--- a/SSDI.RequestMonitoring.UI/Layout/Sidebar.razor
+++ b/SSDI.RequestMonitoring.UI/Layout/Sidebar.razor
@@ -12,11 +12,11 @@
             <a href="/dashboard" class="sidebar__link @GetNavLinkClass("/dashboard")" @onclick="ToggleSidebarIfMobile" >
                 <i class="bi bi-house-door-fill sidebar__icon" /> <span>Dashboard</span>
             </a>
-            <a href="/purchase-requests" class="sidebar__link @GetNavLinkClass("/purchase-requests")" @onclick="ToggleSidebarIfMobile">
+            <a href="/requests/purchase-requests" class="sidebar__link @GetNavLinkClass("/requests/purchase-requests")" @onclick="ToggleSidebarIfMobile">
                 <i class="bi bi-bag-fill sidebar__icon" /> <span>Purchase Requests</span>
             </a>
-            <a href="/job-orders" class="sidebar__link @GetNavLinkClass("/job-orders")" @onclick="ToggleSidebarIfMobile">
-                <i class="bi bi-archive-fill sidebar__icon" /> <span>Job Orders</span>
+            <a href="/requests/job-orders" class="sidebar__link @GetNavLinkClass("/requests/job-orders")" @onclick="ToggleSidebarIfMobile">
+                <i class="bi bi-wrench-adjustable sidebar__icon" /> <span>Job Orders</span>
             </a>
 
 
