--- a/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/Modals/EditRequest__Modal.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/Modals/EditRequest__Modal.razor
@@ -21,9 +21,9 @@
         </div>
 
         <div class="modal__alert">
-            <Alert Message="@AlertMessage" Type="error" ShowCloseButton="false" @bind-IsVisible="IsShowAlert" />
+            <Alert Message="@AlertMessage" Type="AlertType.error" ShowCloseButton="false" @bind-IsVisible="IsShowAlert" />
         </div>
 
-        <New_Purchase__Form Model="RequestModel" OnValidSubmit="HandleSave" OnCloseModal="CloseModal" IsDisabledBtns="_isDisabledBtns" />
+        <PurchaseReq__Form Model="RequestModel" OnValidSubmit="HandleSave" OnCloseModal="CloseModal" IsDisabledBtns="_isDisabledBtns" IsForUpdate="true" />
     </div>
 </div>
